--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,93 @@
 .wrapper {
-	width: 800px;
-	margin: 0 auto;
+  width: 800px;
+  margin: 0 auto;
 }
 
 .transform,
 .transition,
 .animation {
-	border: 1px solid #999;
-	margin: 20px 0;
-	padding: 0 0;
+  border: 1px solid #999;
+  margin: 20px 0;
+  padding: 0 0;
 }
 
 .box {
-	width: 200px;
-	height: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 .b1 {
-	background-color: #89cff0;
-	/*baby blue*/
+  background-color: #89cff0;
+  /*baby blue*/
 }
 
 .b2 {
-	background-color: #de5d83;
-	/*blush*/
+  background-color: #de5d83;
+  /*blush*/
 }
 
 .b3 {
-	background-color: #9696ff;
-	/*purple*/
+  background-color: #9696ff;
+  /*purple*/
 }
 
 .b4 {
-	background-color: #e89380;
-	/*orange*/
+  background-color: #e89380;
+  /*orange*/
+}
+
+/*Transition*/
+.transition .b1 {
+  transition: width 1000ms ease-in-out 0.5s;
+}
+.transition .b1:hover {
+  width: 500px;
+}
+.transition .b2 {
+  transition: width 1000ms, height 500ms;
+  transition-timing-function: ease-out;
+  /*transition-delay: 0.2s,0.5s;*/
+}
+.transition .b2:hover {
+  width: 300px;
+  height: 300px;
+  background-color: #9696ff;
+}
+.transition .b3 {
+  transition: transform 1s cubic-bezier(0.17, 0.67, 0.83, 0.67) 0.5s;
+}
+.transition .b3:hover {
+  transform: rotate(80deg);
+}
+.transition .b4 {
+  transition: all 1s ease-in;
+}
+.transition .b4:hover {
+  background-color: #de5d83;
+  border-radius: 30px;
+}
+
+/*css transform*/
+.transform .box {
+  transition: all 1s ease-out 0.5s;
+}
+.transform .b1:hover {
+  transform: translate(20px, 30px);
+}
+.transform .b2:hover {
+  transform: scale(1.4);
+}
+
+.transform .b3 {
+  transform-origin: top right;
+}
+.transform .b3:hover {
+  transform: rotate(45deg);
+}
+
+.transform .b4 {
+  transform: skewX(45deg) skewY(30deg);
+}
+.transform .b4:hover {
+  transform: skewX(0) skewY(0);
 }
